//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  first_name String [not null]
  last_name String [not null]
  admin_flag Boolean [not null]
  notification_flag Boolean [not null, default: true]
  admins ClubAdmin [not null]
  club_discussions ClubDiscussion [not null]
  club_members ClubMember [not null]
  event_attendance EventAttendance [not null]
  event_bookmarks EventBookmark [not null]
  destination_friend Friend [not null]
  source_friend Friend [not null]
  notifications Notification [not null]
  source_notifications Notification [not null]
  interests UserInterest [not null]
  userReadSpotlights UserReadSpotlight [not null]
  eventLikes EventLike [not null]
  clubLikes ClubLike [not null]
}

Table UserEmailVerification {
  id Int [pk, increment]
  email String [unique, not null]
  code Int [not null]
}

Table Club {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  membership_fee Float [not null]
  is_approved Boolean [not null, default: false]
  admins ClubAdmin [not null]
  categories ClubCategory [not null]
  discussions ClubDiscussion [not null]
  club_members ClubMember [not null]
  events Event [not null]
  notifications Notification [not null]
  likes ClubLike [not null]
}

Table Category {
  id Int [pk, increment]
  type String [not null]
  name String [not null]
  clubs ClubCategory [not null]
  user_interests UserInterest [not null]
}

Table ClubCategory {
  id Int [pk, increment]
  club_id Int [not null]
  category_id Int [not null]
  category Category [not null]
  club Club [not null]
}

Table ClubAdmin {
  id Int [pk, increment]
  club_id Int [not null]
  user_id Int [not null]
  position AdminType [not null, default: 'Owner']
  club Club [not null]
  user User [not null]
}

Table ClubDiscussion {
  id Int [pk, increment]
  user_id Int [not null]
  club_id Int [not null]
  message String [not null]
  create_date DateTime [not null]
  club Club [not null]
  user User [not null]
}

Table Event {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  start_date DateTime [not null]
  end_date DateTime [not null]
  club_id Int [not null]
  location String [not null, default: 'Remote']
  private_flag Boolean [not null, default: false]
  spotlight_flag Boolean [not null, default: false]
  userReadSpotlights UserReadSpotlight [not null]
  club Club [not null]
  event_attendance EventAttendance [not null]
  event_bookmark EventBookmark [not null]
  notifications Notification [not null]
  likes EventLike [not null]
}

Table EventAttendance {
  id Int [pk, increment]
  user_id Int [not null]
  event_id Int [not null]
  event Event [not null]
  user User [not null]
}

Table EventBookmark {
  id Int [pk, increment]
  user_id Int [not null]
  event_id Int [not null]
  event Event [not null]
  user User [not null]
}

Table ClubMember {
  id Int [pk, increment]
  user_id Int [not null]
  club_id Int [not null]
  is_approved Boolean [not null]
  club Club [not null]
  user User [not null]
}

Table UserInterest {
  id Int [pk, increment]
  user_id Int [not null]
  category_id Int [not null]
  category Category [not null]
  user User [not null]
}

Table Notification {
  id Int [pk, increment]
  destination_user_id Int [not null]
  source_user_id Int [not null]
  club_id Int
  event_id Int
  content String [not null]
  create_date DateTime [not null]
  club Club
  destination_user User [not null]
  event Event
  source_user User [not null]
}

Table Friend {
  id Int [pk, increment]
  source_friend_id Int [not null]
  destination_friend_id Int [not null]
  is_accepted Boolean [not null, default: false]
  destination_friend User [not null]
  source_friend User [not null]

  indexes {
    (source_friend_id, destination_friend_id) [unique]
  }
}

Table UserReadSpotlight {
  id Int [pk, increment]
  user_id Int [not null]
  event_id Int [not null]
  event Event [not null]
  user User [not null]
}

Table EventLike {
  id Int [pk, increment]
  user_id Int [not null]
  event_id Int [not null]
  event Event [not null]
  user User [not null]
}

Table ClubLike {
  id Int [pk, increment]
  user_id Int [not null]
  club_id Int [not null]
  club Club [not null]
  user User [not null]
}

Enum AdminType {
  Owner
  Admin
}

Ref: ClubCategory.category_id > Category.id [delete: Cascade]

Ref: ClubCategory.club_id > Club.id [delete: Cascade]

Ref: ClubAdmin.club_id > Club.id [delete: Cascade]

Ref: ClubAdmin.user_id > User.id [delete: Cascade]

Ref: ClubDiscussion.club_id > Club.id [delete: Cascade]

Ref: ClubDiscussion.user_id > User.id [delete: Cascade]

Ref: Event.club_id > Club.id [delete: Cascade]

Ref: EventAttendance.event_id > Event.id [delete: Cascade]

Ref: EventAttendance.user_id > User.id [delete: Cascade]

Ref: EventBookmark.event_id > Event.id [delete: Cascade]

Ref: EventBookmark.user_id > User.id [delete: Cascade]

Ref: ClubMember.club_id > Club.id [delete: Cascade]

Ref: ClubMember.user_id > User.id [delete: Cascade]

Ref: UserInterest.category_id > Category.id [delete: Cascade]

Ref: UserInterest.user_id > User.id [delete: Cascade]

Ref: Notification.club_id > Club.id [delete: Cascade]

Ref: Notification.destination_user_id > User.id [delete: Cascade]

Ref: Notification.event_id > Event.id [delete: Cascade]

Ref: Notification.source_user_id > User.id [delete: Cascade]

Ref: Friend.destination_friend_id > User.id [delete: Cascade]

Ref: Friend.source_friend_id > User.id [delete: Cascade]

Ref: UserReadSpotlight.event_id > Event.id [delete: Cascade]

Ref: UserReadSpotlight.user_id > User.id [delete: Cascade]

Ref: EventLike.event_id > Event.id [delete: Cascade]

Ref: EventLike.user_id > User.id [delete: Cascade]

Ref: ClubLike.club_id > Club.id [delete: Cascade]

Ref: ClubLike.user_id > User.id [delete: Cascade]